--- a/src/shell/taskbar/taskbar.css
+++ b/src/shell/taskbar/taskbar.css
@@ -246,8 +246,8 @@ button:not(:disabled):active img {
     position: absolute;
     bottom: 25px;
     left: 2px;
-    width: max-content;
-    height: max-content;
+    width: fit-content;
+    height: fit-content;
     overflow: hidden;
     z-index: 9999;
     display: none;
